--- a/config/_default/hugo.toml
+++ b/config/_default/hugo.toml
@@ -1,5 +1,5 @@
 ### General
-baseURL = 'http://www.aurelienboissiere.fr/' # Enter your full production URL
+baseURL = 'https://www.aurelienboissiere.fr/' # Enter your full production URL
 languageCode = 'fr-fr' # Default
 timeZone = 'Etc/GMT+2' # IANA timezone https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
 title = 'Aurélien Boissière' # Site title used throughout site
