--- a/hugo.toml
+++ b/hugo.toml
@@ -1,3 +1,3 @@
-baseURL = 'http://aurelienboissiere.fr/'
+baseURL = 'https://aurelienboissiere.fr/'
 languageCode = 'fr-fr'
 title = 'Aurélien Boissière | Welcome to my portfolio'
