--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -5,7 +5,7 @@ disallow_search_engines = false # Disallow search engine crawling in robots.txt
 
 ### Content
 favicon = true # Enable favicon, add your favicon files to /static/ directory
-avatar = 'avatar.png' # Custom avatar image in /assets/
+avatar = 'avatar.jpg' # Custom avatar image in /assets/
 grayscale_avatar = false # Add a grayscale filter to the avatar image
 author = 'Aurélien Boissière' # Default author for <head> meta
 description = "Personal blog and portfolio site of John Doe." # Add a global meta description to <head>
