--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -1,29 +1,29 @@
-[[main]]
-    # Top-level menu entry
-    identifier = "work"
-    name = "Work"
-    url = "/projects/"
-    weight = 1
+#[[main]]
+#    # Top-level menu entry
+#    identifier = "work"
+#    name = "Work"
+#    url = "/projects/"
+#    weight = 1
 
 [[main]]
     identifier = "projects"
     name = "Projects"
     url = "/projects/"
-    parent = "work"
+#    parent = "work"
     weight = 1
 
 [[main]]
     identifier = "about"
     name = "About"
     url = "/about/"
-    parent = "work"
+#    parent = "work"
     weight = 2
 
 [[main]]
     identifier = "contact"
     name = "Contact"
     url = "/contact/"
-    parent = "work"
+#    parent = "work"
     weight = 3
 
 # [[main]]
@@ -55,26 +55,26 @@
     url = "/categories/"
     weight = 6
 
-[[main]]
-    identifier = "categories"
-    name = "Categories"
-    url = "/categories/"
-    parent = "explore"
-    weight = 6
+#[[main]]
+#    identifier = "categories"
+#    name = "Categories"
+#    url = "/categories/"
+#    parent = "explore"
+#    weight = 6
 
-[[main]]
-    identifier = "tags"
-    name = "Tags"
-    url = "/tags/"
-    parent = "explore"
-    weight = 7
+#[[main]]
+#    identifier = "tags"
+#    name = "Tags"
+#    url = "/tags/"
+#    parent = "explore"
+#    weight = 7
 
-[[main]]
-    identifier = "series"
-    name = "Series"
-    url = "/series/"
-    parent = "explore"
-    weight = 8
+#[[main]]
+#    identifier = "series"
+#    name = "Series"
+#    url = "/series/"
+#    parent = "explore"
+#    weight = 8
 
 [[main]]
     identifier = "project-type"
