--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -26,6 +26,13 @@
 #    parent = "work"
     weight = 3
 
+[[main]]
+    identifier = "resume"
+    name = "Resume"
+    url = "/resume/"
+#    parent = "work"
+    weight = 3
+
 # [[main]]
 #    # Top-level menu entry
 #    identifier = "writing"
