--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -19,12 +19,12 @@
 #    parent = "work"
     weight = 2
 
-[[main]]
-    identifier = "contact"
-    name = "Contact"
-    url = "/contact/"
+#[[main]]
+#    identifier = "contact"
+#    name = "Contact"
+#    url = "/contact/"
 #    parent = "work"
-    weight = 3
+#    weight = 3
 
 [[main]]
     identifier = "resume"
