--- a/package.json
+++ b/package.json
@@ -3,6 +3,6 @@
     "tailwindcss": "^3.3.3"
   },
   "scripts": {
-    "build-tw": "npx tailwindcss -i ./assets/main.css -o ./assets/style.css"
+    "build-tw": "npx tailwindcss -i ./assets/main.css -o ./assets/styles.css"
   }
 }
